[package]
name = "auto-wifi-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.32"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
notify-rust = "4.11"

[[bin]]
name = "auto-wifi"
path = "src/main.rs"
